@@ -1,4 +1,6 @@
-Tue Sep  6 13:15:44 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Tue Sep  6 15:55:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* transcode.c (load_transcoder_entry): concatenate paths directly.
 
 	* encoding.c (load_encoding): predefined encoding names are safe.
 	  [ruby-dev:44469] [Bug #5279]
